# respectful-http

./: Cargo.toml  LICENSE-MIT  README.md
src/: error.rs  http.rs  lib.rs  respectful_retry.rs
